<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_diff_alpha"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context="com.twentyfourkapps.geograph.achievements"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_arrow"
        android:onClick="home_pressed"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"


        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Achievements"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/achievements_logo"
            android:drawableLeft="@drawable/achievements_logo"
            android:drawablePadding="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/button_difficulty_focused"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            tools:context="com.twentyfourkapps.geograph.achievements"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login_achievments"
                android:textColor="@color/blue_play"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"
                />

            <View android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@drawable/button_sign_in"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/bitmap"
                android:drawableStart="@drawable/bitmap"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:onClick="login"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_difficulty_focused"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"

            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/no_login_achievments"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/new_blue"
                android:textSize="15sp"
                android:textStyle="italic"
                android:onClick="back"
                />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>